--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-material": "^1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
