--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-material": "^1.0.6"
+    "angular-material": "^1.0.6",
+    "angular-oauth2": "^4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
